plugins {
    id 'java'
    id 'java-gradle-plugin'
    id 'maven-publish'
}

group = 'org.ifpb.ideia'
version = '2.0.0'
description = 'A framework to generate unit tests using LLMs'

java {
    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11
}

gradlePlugin {
    plugins {
        register("chatunitestPlugin") {
            id = "org.ifpb.ideia.chatunitest"
            implementationClass = "org.ifpb.ideia.ChatUniTestPlugin"
        }
    }
}

publishing {
    publications {
        maven(MavenPublication) {
            groupId = 'org.ifpb.ideia'
            artifactId = 'chatunitest-gradle-plugin'
            version = '2.0.0'

            from components.java
        }
    }
}

repositories {
    mavenLocal()
    mavenCentral()
    maven {
        url "https://repo.gradle.org/gradle/libs-releases"
    }
}

dependencies {
    compileOnly gradleApi()
    compileOnly 'org.projectlombok:lombok:1.18.24'
    annotationProcessor 'org.projectlombok:lombok:1.18.24'
    implementation 'org.ifpb.ideia:chatunitest-core:2.0.0'
    implementation 'org.codehaus.plexus:plexus-utils:3.4.1'
    implementation 'org.apache.maven:maven-core:3.9.4'
    implementation 'com.github.javaparser:javaparser-core:2.24.0' // ou versão mais recente
    implementation("com.github.javaparser:javaparser-symbol-solver-core:2.24.0")
    implementation 'com.squareup.okhttp3:okhttp:4.9.3'
    implementation 'org.jgrapht:jgrapht-core:1.3.0'
    implementation 'com.google.code.gson:gson:2.10.1'
    implementation 'com.knuddels:jtokkit:0.4.0'
    implementation 'org.sonarsource.analyzer-commons:sonar-analyzer-recognizers:1.24.0.965'
    implementation 'org.freemarker:freemarker:2.3.30'
    // JUnit Platform Launcher
    implementation  'org.junit.platform:junit-platform-launcher:1.9.2'

    // JUnit Jupiter (5.x)
    implementation  'org.junit.jupiter:junit-jupiter-engine:5.9.2'

    // JUnit Vintage (for running JUnit 3/4 tests)
    implementation  'org.junit.vintage:junit-vintage-engine:5.9.2'

    // Also include this for writing tests
    implementation  'org.junit.jupiter:junit-jupiter-api:5.9.2'

}